--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,6 @@ pythonpath = .
 asyncio_mode = auto
 testpaths = tests
 python_files = test_*.py
-addopts = -v --cov=app --cov-report=term-missing --cov-report=html 
+addopts = -v --cov=app --cov-report=term-missing --cov-report=html
+markers =
+    integration: marks tests as integration tests
