--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    
     steps:
     - uses: actions/checkout@v3
     
@@ -17,12 +19,15 @@ jobs:
       with:
         python-version: "3.12"
         cache: 'pip'
+        cache-dependency-path: |
+          requirements.txt
+          requirements-dev.txt
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        pip install --no-cache-dir -r requirements.txt
+        pip install --no-cache-dir -r requirements-dev.txt
     
     - name: Create test files
       run: |
@@ -36,10 +41,19 @@ jobs:
         WEBSHARE_TOKEN: test_webshare_token
         ENV: test
       run: |
-        pytest --cov=app --cov-report=xml
+        python -m pytest --cov=app --cov-report=xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
         fail_ci_if_error: false
+      
+    - name: Cleanup
+      if: always()
+      run: |
+        rm -rf .pytest_cache
+        rm -rf .coverage
+        rm -rf coverage.xml
+        rm -rf htmlcov
+        rm -rf app/static/*.
