--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,26 @@
-# Production environment settings
-AUTH_TOKEN=${AUTH_TOKEN}
+# API Settings
+AUTH_TOKEN=your_secure_production_token_here  # Must be a strong, unique token
 HOST=0.0.0.0
 PORT=8080
-WEBSHARE_TOKEN=${WEBSHARE_TOKEN}
-MAX_WORKERS=8
-SCRAPER_TIMEOUT=30
-CACHE_TTL=14400
-CACHE_MAX_SIZE=32
-DEBUG=false 
+
+# Proxy Settings
+WEBSHARE_TOKEN=your_webshare_token_here
+PROXY_UPDATE_INTERVAL=1800  # More frequent updates in production (30 mins)
+PROXY_MAX_FAILURES=2        # More aggressive failure handling
+PROXY_TIMEOUT=20           # Shorter timeout for production
+
+# Runner Settings
+NUM_RUNNERS=4              # More runners for production load
+RUNNER_TIMEOUT=25         # Slightly shorter timeout
+RUNNER_REGISTRATION_RETRY=3
+
+# Redis Settings
+REDIS_URL=redis://redis:6379
+REDIS_PASSWORD=your_secure_redis_password_here  # Add Redis auth in production
+
+# Environment
+ENV=production
+DEBUG=false
+
+# Health Check Settings
+HEALTH_CHECK_INTERVAL=30  # More frequent health checks in production
