--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # API Settings
-AUTH_TOKEN=dev_token_123
+AUTH_TOKEN=your_auth_token_here
 HOST=0.0.0.0
 PORT=8080
 
 # Proxy Settings
-WEBSHARE_TOKEN=l3kc2q3342jmak42zv1so6agpk22pk2q510g0d8q
+WEBSHARE_TOKEN=your_webshare_token_here
 PROXY_UPDATE_INTERVAL=3600
 PROXY_MAX_FAILURES=3
 PROXY_TIMEOUT=30
@@ -19,4 +19,4 @@ REDIS_URL=redis://redis:6379
 
 # Environment
 ENV=development
-DEBUG=false
+DEBUG=true 
