--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,46 @@
+version: '3.8'
+
 services:
   distributor:
-    build: ./distributor
+    build:
+      context: ./Distributor
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     env_file:
       - .env.development
     environment:
       - PYTHONUNBUFFERED=1
-      - DEBUG=${DEBUG:-false}
-      - LOG_LEVEL=DEBUG
-    volumes:
-      - ./distributor:/app
+      - DEBUG=true
+      - HOST=0.0.0.0
+      - PORT=8080
+      - ENV=development
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health/public"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
-    networks:
-      - scrape_network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+    volumes:
+      - ./Distributor:/app
+    restart: unless-stopped
 
   runner:
-    build: ./runner
+    build:
+      context: ./Runner
+      dockerfile: Dockerfile
     env_file:
       - .env.development
     environment:
       - PYTHONUNBUFFERED=1
-      - DEBUG=${DEBUG:-false}
-      - LOG_LEVEL=DEBUG
-      - RUNNER_ID=runner-$${HOSTNAME}
+      - DEBUG=true
+      - LOG_LEVEL=debug
+      - RUNNER_ID=runner-${HOSTNAME:-runner}
       - DISTRIBUTOR_URL=http://distributor:8080
-    volumes:
-      - ./runner:/app
-    deploy:
-      mode: replicated
-      replicas: ${NUM_RUNNERS:-2}
     depends_on:
       distributor:
         condition: service_healthy
-    networks:
-      - scrape_network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-networks:
-  scrape_network:
-    driver: bridge
+    volumes:
+      - ./Runner:/app
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
