--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   distributor:
     build:
@@ -7,50 +5,40 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    env_file:
+      - .env.production
     environment:
-      - AUTH_TOKEN=${AUTH_TOKEN}
-      - WEBSHARE_TOKEN=${WEBSHARE_TOKEN}
-      - MAX_WORKERS=4
+      - PYTHONUNBUFFERED=1
+      - DEBUG=true
       - HOST=0.0.0.0
       - PORT=8080
       - ENV=production
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health/public"]
       interval: 30s
       timeout: 10s
       retries: 3
+    volumes:
+      - ./Distributor:/app
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
 
   runner:
     build:
       context: ./Runner
       dockerfile: Dockerfile
+    env_file:
+      - .env.production
     environment:
-      - AUTH_TOKEN=${AUTH_TOKEN}
+      - PYTHONUNBUFFERED=1
+      - DEBUG=true
+      - LOG_LEVEL=debug
+      - RUNNER_ID=runner-${HOSTNAME:-runner}
       - DISTRIBUTOR_URL=http://distributor:8080
-      - MAX_CONCURRENT_SCRAPES=5
-      - ENV=production
     depends_on:
       distributor:
         condition: service_healthy
-    deploy:
-      replicas: 3
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
+    volumes:
+      - ./Runner:/app
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-networks:
-  default:
-    driver: bridge
