--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       - ./Distributor:/app
     restart: unless-stopped
     networks:
-      - scrape_network
+      scrape_network:
+        aliases:
+          - distributor
 
   runner:
     build:
@@ -29,7 +31,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - RUNNER_ID=runner-${HOSTNAME:-runner}
-      - DISTRIBUTOR_URL=http://distributor:8080
+      - DISTRIBUTOR_INTERNAL_URL=http://distributor:8080
     depends_on:
       distributor:
         condition: service_healthy
@@ -42,6 +44,7 @@ services:
       replicas: ${NUM_RUNNERS:-1}
     networks:
       - scrape_network
+    dns_search: .
 
 networks:
   scrape_network:
