--- a/Runner/Dockerfile
+++ b/Runner/Dockerfile
@@ -2,32 +2,13 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies including DNS utilities
+# Install system dependencies
 RUN apt-get update && \
     apt-get install -y \
     curl \
+    iputils-ping \
     dnsutils \
-    libglib2.0-0 \
-    libnss3 \
-    libnspr4 \
-    libatk1.0-0 \
-    libatk-bridge2.0-0 \
-    libcups2 \
-    libdrm2 \
-    libdbus-1-3 \
-    libxcb1 \
-    libxkbcommon0 \
-    libx11-6 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxext6 \
-    libxfixes3 \
-    libxrandr2 \
-    libgbm1 \
-    libpango-1.0-0 \
-    libcairo2 \
-    libasound2 \
-    libatspi2.0-0 \
+    net-tools \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
