--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,7 @@ services:
       - ./Distributor:/app
     restart: unless-stopped
     networks:
-      scrape_network:
-        aliases:
-          - distributor
+      - scrape_network
 
   runner:
     build:
@@ -40,12 +38,9 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-    deploy:
-      replicas: ${NUM_RUNNERS:-1}
     networks:
       - scrape_network
 
 networks:
   scrape_network:
     driver: bridge
-    internal: false
