--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,8 @@
 # API Settings
 AUTH_TOKEN=your_auth_token_here
-HOST=0.0.0.0
-PORT=8080
 
 # Proxy Settings
 WEBSHARE_TOKEN=your_webshare_token_here
-PROXY_UPDATE_INTERVAL=3600
-PROXY_MAX_FAILURES=3
-PROXY_TIMEOUT=30
 
-# Runner Settings
-NUM_RUNNERS=2
-RUNNER_TIMEOUT=30
-RUNNER_REGISTRATION_RETRY=5
-
-# Environment
-ENV=development
+# Debugging
 DEBUG=false
-LOG_LEVEL=debug
