--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,17 @@
 # Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
 # Virtual Environment
-venv/
-ENV/
-env/
 .env
-.env.*
 !.env.example
 
 # IDE
 .idea/
 .vscode/
+.conda/
 *.swp
 *.swo
 .DS_Store
-
-# Testing
-.coverage
-coverage.xml
-htmlcov/
-.pytest_cache/
-.tox/
 
 # Project specific
 app/static/*.txt
