--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
-# API Settings
-AUTH_TOKEN=your_auth_token_here
+# Frontend configuration
+INTERNAL_API_URL=http://distributor:8080
 
-# Proxy Settings
-WEBSHARE_TOKEN=your_webshare_token_here
+# Backend configuration
+WEBSHARE_TOKEN=your_webshare_token
 
-# Debugging
-DEBUG=false
+# Database configuration
+POSTGRES_DB=scrapeengine
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# Runner configuration
+RUNNER_REPLICAS=3
