--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: ./Distributor
       dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
     env_file:
       - .env
     environment:
