--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,25 @@ services:
     networks:
       - scrape_network
 
+  frontend:
+    build:
+      context: ./Frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=http://distributor:8080
+      - AUTH_TOKEN=${AUTH_TOKEN}
+    depends_on:
+      distributor:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - scrape_network
+
   runner:
     build:
       context: ./Runner
