--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ WEBSHARE_TOKEN=your_webshare_token_here
 
 # Debugging
 DEBUG=false
+
+# Stack Auth Settings
+NEXT_PUBLIC_STACK_API_URL=
+NEXT_PUBLIC_STACK_PROJECT_ID=
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
+STACK_SECRET_SERVER_KEY=
