--- a/Runner/Dockerfile
+++ b/Runner/Dockerfile
@@ -10,13 +10,37 @@ RUN apt-get update && \
     dnsutils \
     net-tools \
     fonts-unifont \
+    fonts-freefont-ttf \
+    # Add more font packages to satisfy Playwright requirements
+    xfonts-utils \
+    fonts-liberation \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Install Playwright browsers
-RUN playwright install chromium --with-deps
+# Install Playwright browsers without dependencies (we installed them manually)
+RUN playwright install chromium --with-deps || \
+    (apt-get update && \
+     apt-get install -y \
+     libx11-xcb1 \
+     libxcomposite1 \
+     libxcursor1 \
+     libxdamage1 \
+     libxi6 \
+     libxtst6 \
+     libnss3 \
+     libcups2 \
+     libxss1 \
+     libxrandr2 \
+     libasound2 \
+     libatk1.0-0 \
+     libatk-bridge2.0-0 \
+     libpangocairo-1.0-0 \
+     libgtk-3-0 \
+     libgbm1 \
+     libxshmfence1 \
+     && playwright install chromium)
 
 COPY . .
 
